--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
         dockerfile: ./wordpress/Dockerfile
     volumes:
       - ./wordpress/wordpress_data:/var/www/html
+      - ./apache-logs:/var/log/apache2
     ports:
       - "8000:80"
     restart: always
@@ -29,6 +30,8 @@ services:
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
       WORDPRESS_DB_NAME: wordpress
+
+
 volumes:
   db_data: {}
   wordpress_data: {}
