--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,10 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
+      - name: Install npm
+        run: apt install -y npm
+     
+      # Runs a single command using the runners shell
       - name: Install npm dependencies
         run: npm i
 
