--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,9 @@ jobs:
       # Runs a single command using the runners shell
       - name: Install npm dependencies
         run: npm i
+        working-directory: docs
 
       # Runs a set of commands using the runners shell
       - name: Build
         run: npx honkit build
+        working-directory: docs
