--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,12 @@ jobs:
       # Runs a single command using the runners shell
       - name: Install npm dependencies
         run: npm i
-        working-directory: ./docs
+        working-directory: docs
 
       # Runs a set of commands using the runners shell
       - name: Build
         run: npx honkit build
-        working-directory: ./docs
+        working-directory: docs
 
 	  - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
