--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,12 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Build
         run: npx honkit build
+        working-directory: docs
 
-	  - name: Upload artifact
+      - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v1
-		path: _book
+        path: docs/_book
   
   deploy:
 	environment:
