--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,11 +44,15 @@ jobs:
           path: docs/_book
   
   deploy:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     environment:
-      name: github-pages
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
+        name: github-pages
+        runs-on: ubuntu-latest
+        needs: build
+        steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
